--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build Docker Image
+name: Build Docker Image and Push to ghcr.io
 
 # 当 push 到 main 分支，或者创建以 v 开头的 tag 时触发，可根据需求修改
 on:
@@ -7,10 +7,6 @@ on:
       - main
     tags:
       - v*
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE: szetowah/auto-website
 
 jobs:
   build-and-push:
@@ -25,63 +21,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 缓存 Docker 镜像以加速构建
-      - name: Cache Docker layers
-        uses: actions/cache@v4
+      - uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          path: /tmp/.buildx-cache
-          key: $-buildx-$
-          restore-keys: |
-            $-buildx-
-
-      # 配置 QEMU 和 buildx 用于多架构镜像的构建
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Inspect builder
-        run: |
-          echo "Name:      $"
-          echo "Endpoint:  $"
-          echo "Status:    $"
-          echo "Flags:     $"
-          echo "Platforms: $"
-
-      # 登录到 GitHub Packages 容器仓库
-      # secrets.GITHUB_TOKEN 不需要手动添加，直接就可以用
-      - name: Log in to the Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: $
-          username: $
-          password: $
-
-      # 根据输入自动生成 tag 和 label 等数据，说明见下
-      - name: Extract metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: $/$
-
-      # 构建并上传
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          target: production
-          builder: $
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: $
-          labels: $
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-
-      - name: Inspect image
-        run: |
-          docker buildx imagetools inspect \
-          $/$:$
+          image: auto-website
+          registry: ghcr.io
+          githubOrg: override-org # optional
+          username: ${{ secrets.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
