--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build Docker Image and Push to ghcr.io
+name: Build Docker Image and Push
 
 # 当 push 到 main 分支，或者创建以 v 开头的 tag 时触发，可根据需求修改
 on:
@@ -9,21 +9,25 @@ on:
       - v*
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
-
-    # 这里用于定义 GITHUB_TOKEN 的权限
-    permissions:
-      packages: write
-      contents: read
-
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - uses: mr-smithers-excellent/docker-build-push@v6
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          image: auto-website
           registry: ghcr.io
-          username: ${{ secrets.GHCR_USERNAME }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/auto-website:latest
