--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,16 @@
 name: Build Docker Image and Push
 
-# 当 push 到 main 分支，或者创建以 v 开头的 tag 时触发，可根据需求修改
+# 当 push 到 main 分支，或者创建以 v 开头的 tag 时触发
 on:
   push:
     branches:
       - main
     tags:
       - v*
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build:
@@ -30,4 +34,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/auto-website:latest
+          tags: ghcr.io/${{ github.repository }}:latests
