--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,4 +34,6 @@ jobs:
         with:
           context: .
           push: true
+          provenance: false
+          sbom: false
           tags: ghcr.io/${{ github.repository }}:latest
