--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,6 +34,5 @@ jobs:
         with:
           context: .
           push: true
-          provenance: false
-          sbom: false
           tags: ghcr.io/${{ github.repository }}:latest
+          platforms: linux/amd64,linux/arm64
